ops/ocp/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/eduardocerqueira/linknotfound
    deployment.kubernetes.io/revision: "8"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"linknotfound:latest","namespace":"insights-qe-dev"},"fieldPath":"spec.template.spec.containers[?(@.name==\"linknotfound\")].image","pause":"false"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2023-01-13T19:57:51Z"
  generation: 8
  labels:
    app: linknotfound
    app.kubernetes.io/component: linknotfound
    app.kubernetes.io/instance: linknotfound
    app.kubernetes.io/name: linknotfound
    app.kubernetes.io/part-of: linknotfound
  name: linknotfound
  namespace: insights-qe-dev
  resourceVersion: "3835703595"
  uid: 92587f46-238d-467c-b8cb-48e604d106a6
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: linknotfound
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: linknotfound
        deploymentconfig: linknotfound
    spec:
      containers:
      - env:
        - name: LINKNOTFOUND_RUN
          value: web
        envFrom:
        - secretRef:
            name: linknotfound-secrets
        image: image-registry.openshift-image-registry.svc:5000/insights-qe-dev/linknotfound@sha256:cd68777cf7a3645fc9ed86ee71146ebc21c7d6b6ef1b3b13d21c6ce5c46e60da
        imagePullPolicy: Always
        name: linknotfound
        resources:
          limits:
            cpu: 200m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-01-13T20:12:39Z"
    lastUpdateTime: "2023-01-13T20:12:39Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-01-13T19:57:51Z"
    lastUpdateTime: "2023-01-13T21:00:16Z"
    message: ReplicaSet "linknotfound-6ff569bfb7" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 8
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
